; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_tcabdb.c_ht_get_cumts_min_max.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_tcabdb.c_ht_get_cumts_min_max.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MTRC_CUMTS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ht_get_cumts_min_max(i32 %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @MTRC_CUMTS, align 4
  %10 = call i8* @get_hash(i32 %8, i32 %9)
  store i8* %10, i8** %7, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %3
  br label %19

14:                                               ; preds = %3
  %15 = load i8*, i8** %7, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = load i32*, i32** %6, align 8
  %18 = call i32 @get_iu64_min_max(i8* %15, i32* %16, i32* %17)
  br label %19

19:                                               ; preds = %14, %13
  ret void
}

declare dso_local i8* @get_hash(i32, i32) #1

declare dso_local i32 @get_iu64_min_max(i8*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
